# Hr-agent

./: .gitignore  generate_pdf.py  main.py  pyproject.toml
.adk/artifacts/users/user/sessions/0077bd78-f06b-4542-a1d7-5fd047f3953c/artifacts/offer_shashivendra_singh.pdf/versions/0/: metadata.json
.adk/artifacts/users/user/sessions/0077bd78-f06b-4542-a1d7-5fd047f3953c/artifacts/offer_shashivendra_singh.pdf/versions/1/: metadata.json
.adk/artifacts/users/user/sessions/0ada74a9-6bd8-4838-981a-5b9bf5ce7912/artifacts/Offer_shashivendra_singh.pdf/versions/0/: metadata.json
.adk/artifacts/users/user/sessions/1ae45f29-6637-4f41-866e-f7e14f7a5cfa/artifacts/Offer_shashivendra_singh.pdf/versions/0/: metadata.json
.adk/artifacts/users/user/sessions/1ae45f29-6637-4f41-866e-f7e14f7a5cfa/artifacts/Offer_shashivendra_singh.pdf/versions/1/: metadata.json
.adk/artifacts/users/user/sessions/1ae45f29-6637-4f41-866e-f7e14f7a5cfa/artifacts/Offer_shashivendra_singh.pdf/versions/2/: metadata.json
.adk/artifacts/users/user/sessions/1e24e4e1-080e-4a43-9fec-51931977a60f/artifacts/Offer_Rohan_N.pdf/versions/0/: metadata.json
.adk/artifacts/users/user/sessions/1e24e4e1-080e-4a43-9fec-51931977a60f/artifacts/Offer_Rohan_N.pdf/versions/1/: metadata.json
.adk/artifacts/users/user/sessions/1e24e4e1-080e-4a43-9fec-51931977a60f/artifacts/Offer_shashivendra_singh.pdf/versions/0/: metadata.json
hr_policy_agent/: __init__.py  agent.py
hr_policy_agent/.adk/: session.db
hr_policy_agent/tools/: email.py  embedding.py  pdf_generation_tool.py
(+58 files in other folders)
